Form Validation added with messages.

--- a/pages/templates/change_password.html
+++ b/pages/templates/change_password.html
@@ -29,10 +29,19 @@
 <body>
 
 	<div class="container-contact100">
-
 		<div class="wrap-contact100">
 			<form method="POST" class="contact100-form validate-form">
 				{% csrf_token %}
+
+                {% if message %}
+                    <div class="alert alert-danger">
+                    <a class="close" href="#" data-dismiss="alert">×</a>
+                    {{ message }}
+                  </div>
+                {% endif %}
+
+                <input type = "text" name = "form_type" style="display: none" value = "form-1">
+
 				<span class="contact100-form-title">
 					Change Password
 				</span>
