--- a/pages/templates/change_password_2.html
+++ b/pages/templates/change_password_2.html
@@ -32,10 +32,15 @@
 
 		var pass_1 = document.getElementById("n_pass").value;
 		var pass_2 = document.getElementById("n_pass_2").value;
+		var dialog = document.getElementById("dialog")
 
-		window.open("change/" + pass_1 + "/" + pass_2);
-
-
+		if(pass_1 !== pass_2){
+            dialog.innerHTML = "<a class=\"close\" href=\"#\" data-dismiss=\"alert\">×</a> Passwords do not match!";
+            dialog.style.display = "block";
+        }
+        else{
+            window.location.href = "change/" + "post";
+        }
 };
 
 </script>
@@ -48,6 +53,18 @@
 		<div class="wrap-contact100">
 			<form method="POST" class="contact100-form validate-form">
 				{% csrf_token %}
+
+                 {% if message %}
+                     {% for i in message %}
+                      <div class="alert alert-danger">
+                        <a class="close" href="#" data-dismiss="alert">×</a>
+                        {{ i }}
+                      </div>
+                     {% endfor %}
+                 {% endif %}
+
+                <input type = "text" name = "form_type" style="display: none" value = "form-2">
+
 				<span class="contact100-form-title">
 					Change Password
 				</span>
@@ -61,7 +78,7 @@
 				</div>
 
 				<div class="container-contact100-form-btn">
-					<button onclick = "change();" class="contact100-form-btn" id="submit-btn" >
+					<button type = "submit" class="contact100-form-btn" id="submit-btn" >
 							Change
 					</button>
 				</div>
