--- a/pages/templates/registration/login.html
+++ b/pages/templates/registration/login.html
@@ -44,6 +44,12 @@
 
         <span class="login100-form-title p-b-43">Log in
         </span>
+        {% if form.errors %}
+          <div class="alert alert-danger">
+            <a class="close" href="#" data-dismiss="alert">×</a>
+            Username or Password is incorrect
+          </div>
+        {% endif %}
 
         <div class="wrap-input100 validate-input" data-validate = "Valid username is required: ex@abc.xyz">
           <input class="input100" type="text" name="username">
