--- a/pages/templates/editProfile.html
+++ b/pages/templates/editProfile.html
@@ -33,6 +33,16 @@
 		<div class="wrap-contact100">
 			<form method="POST" class="contact100-form validate-form">
 				{% csrf_token %}
+
+                {% if message %}
+                     {% for i in message %}
+                      <div class="alert alert-danger">
+                        <a class="close" href="#" data-dismiss="alert">×</a>
+                        {{ i }}
+                      </div>
+                     {% endfor %}
+                 {% endif %}
+
 				<span class="contact100-form-title">
 					Edit Profile
 				</span>
