Remove overflow: hidden property and allow scrolling.

--- a/pages/templates/studentBase.html
+++ b/pages/templates/studentBase.html
@@ -119,7 +119,7 @@
     </header>
     <!-- Header part end-->
 
-<body>
+<body style = "background-color: #07a3ab">
     {% block main-content %}
         Body Content
     {% endblock %}
