--- a/pages/templates/teacherBase.html
+++ b/pages/templates/teacherBase.html
@@ -119,14 +119,14 @@
       .class-card{
       transition: 0.3s;
       margin-bottom: 15px;
-      width: 1080px;
+      width: 100%;
       }
 
 
 
     </style>
 
-<body>
+<body style = "background-color: #07a3ab">
     {% block main-content %}
         Body Content
     {% endblock %}
