--- a/pages/templates/teacherClass.html
+++ b/pages/templates/teacherClass.html
@@ -6,8 +6,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-12">
-            <div class="banner_text">
-              <div class="banner_text_iner"><br><br><br><br><br>
+            <div class="banner_text"><br><br><br><br><br>
                 <center><h1>Classes</h1></center>
                 {% for class in classes %}
                 <div class="card class-card">
@@ -19,7 +18,6 @@
                   </div>
                 </div>
                 {% endfor %}
-              </div>
             </div>
           </div>
         </div>
