--- a/pages/templates/pages/denied.html
+++ b/pages/templates/pages/denied.html
@@ -2,4 +2,5 @@
 
 <br><br><center><h1>Access Denied</h1></center><br>
 
-<center><a class = "btn btn-primary" href = "/home"> Go back to Home</a></center>
+<center><a class = "btn btn-primary" href = "/home">Go Home</a>
+<button class = "btn btn-secondary" onclick="history.back();">Go Back</button></center>
