--- a/classes/templates/classes/student/join.html
+++ b/classes/templates/classes/student/join.html
@@ -33,6 +33,14 @@
 		<div class="wrap-contact100">
 			<form method="POST" class="contact100-form validate-form">
 				{% csrf_token %}
+
+                {% if message %}
+                      <div class="alert alert-danger">
+                        <a class="close" href="#" data-dismiss="alert">×</a>
+                        {{ message }}
+                      </div>
+                 {% endif %}
+
 				<span class="contact100-form-title">
 					Join a Class
 				</span>
