--- a/classes/templates/classes/teacher/view.html
+++ b/classes/templates/classes/teacher/view.html
@@ -1,6 +1,40 @@
 {% extends "base.html" %}
 
 {% block main-content %}
+    <script>
+        function random() {
+            let students = []
+            {% for student in students %}
+                students.push("{{ student.first_name }}")
+            {% endfor %}
+
+            var student = students[Math.floor(Math.random() * students.length)];
+
+            document.getElementById("modal-title").innerHTML = "Random Student";
+            document.getElementById("modal-content").innerHTML = student;
+            document.getElementById("spin").style.display = "block";
+
+            $('#modal').modal('show')
+        }
+        function showCode(){
+            document.getElementById("modal-title").innerHTML = "Class Code";
+            document.getElementById("modal-content").innerHTML = "{{ class.code }}";
+            document.getElementById("spin").style.display = "none";
+
+            $('#modal').modal('show')
+        }
+    </script>
+    <style>
+        .random-button:hover{
+            cursor: pointer;
+        }
+        .class-code{
+            color: #ffffff;
+        }
+        .class-code:hover{
+            cursor: pointer;
+        }
+    </style>
 
     <!-- banner part start-->
     <section class="banner_part background_teal">
@@ -9,9 +43,13 @@
           <div class="col-lg-12">
             <div class="banner_text"><br><br><br><br><br>
                 <center><h1>{{class.name}}</h1>
-                <h3 style = 'color: white;'>(Class Code: {{class.code}}) <a class = "edit-title" href = "/class/edit/{{ class.id }}">✎</a></h3>
+                    <h3 style = 'color: white;'><a class = "class-code" onclick = "showCode();">(Class Code: {{class.code}})</a> <a class = "edit-title" href = "/class/edit/{{ class.id }}">✎</a></h3>
                 <p style = 'color: white;'>{{ class.description }}</p><br><br><br>
+                {% if studentsA > 1%}
+                <h1><img class = "random-button" onclick="random();" src = "/static/images/wheel.png" style = "height: 55px;"> Students <span class="badge badge-secondary">{{studentsA}}</span></h1></center>
+                {% else %}
                 <h1>Students <span class="badge badge-secondary">{{studentsA}}</span></h1></center>
+                {% endif %}
 
                 {% for student in students %}
                 <div class="card class-card">
@@ -39,5 +77,25 @@
         </div>
       </div>
     </section>
+
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modal-title">Random Student</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              <center><h1 id = "modal-content">Student</h1></center>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" id = "spin" onclick="random()" class="btn btn-primary">Spin Again</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 {% endblock %}
