--- a/pages/templates/pages/studentHome.html
+++ b/pages/templates/pages/studentHome.html
@@ -8,11 +8,12 @@
         <br><br><br><br><br><center><h1 style = "color: white;">Welcome to the Homework Manager Student Portal</h1></center><br><br><br>
 
 
-        <h1 style = "color: white;">You have <span class="badge badge-secondary" style = "color: #00d089;">{{AssignmentsA}}</span> Pending Assignments.</h1>
-        <h1 style = "color: white;">You have <span class="badge badge-secondary" style = "color: #00d089;">{{AssignmentsD}}</span> Completed Assignments.</h1>
-        <h1 style = "color: white;">You have <span class="badge badge-secondary" style = "color: #00d089;">{{Classes}}</span> Classes.</h1><br><br>
+        <h1 style = "color: white;">You have <span class="badge badge-secondary" style = "color: #00d089;">{{AssignmentsA}}</span> Pending Assignment{% if AssignmentsA > 1 or AssignmentsA == 0 %}s.{% else %}.{% endif %}</h1>
+        <h1 style = "color: white;">You have <span class="badge badge-secondary" style = "color: #00d089;">{{AssignmentsD}}</span> Completed Assignment{% if AssignmentsD > 1 or AssignmentsD == 0 %}s.{% else %}.{% endif %}</h1>
+        <h1 style = "color: white;">You have <span class="badge badge-secondary" style = "color: #00d089;">{{Classes}}</span> Class{% if Classes > 1 or Classes == 0 %}es.{% else %}.{% endif %}</h1><br><br>
 
-        <div class="row">
+
+          <div class="row">
           <div class="col-sm-4">
             <div class="card card-3 home-card">
               <div class="card-body">
