--- a/assignments/templates/assignments/student/index.html
+++ b/assignments/templates/assignments/student/index.html
@@ -46,7 +46,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <form method="POST">
               {% csrf_token %}
