--- a/static/style.css
+++ b/static/style.css
@@ -9,19 +9,22 @@
 .class-card{
       transition: 0.3s;
       margin-bottom: 15px;
-      width: 1080px;
+      width: 100%;
 }
 
 .home-card{
   transition: 0.3s;
+  margin-bottom: 15px;
 }
 
-.home-card:hover{
+@media (min-width: 990px) {
+    .home-card:hover {
         transform: scale(1.1, 1.1);
-        box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), -5px -5px 30px 15px rgba(0,0,0,0.22);
-}
+        box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25), -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+    }
 
-.class-card:hover{
+    .class-card:hover {
         transform: scale(1.1, 1.1);
-        box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), -5px -5px 30px 15px rgba(0,0,0,0.22);
+        box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25), -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
+    }
 }
