--- a/homework_manager/templates/base.html
+++ b/homework_manager/templates/base.html
@@ -23,6 +23,16 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/static/style.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165961981-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-165961981-3');
+    </script>
+
   </head>
 
     <!--::header part start::-->
