--- a/classes/templates/classes/teacher/edit.html
+++ b/classes/templates/classes/teacher/edit.html
@@ -39,7 +39,8 @@
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter a valid class name">
 					<input class="input100" id="name" value = "{{ class.name }}" type="text" name="name" placeholder="Class Name" data-bv-field="name">
-				</div>
+				    <span class="focus-input100"></span>
+                </div>
 
 				<div class="wrap-input100 validate-input" data-validate = "Please enter a valid descripion">
 					<textarea class="input100" id = 'description' type="text" name="description" placeholder="Description" data-bv-field="description">{{ class.description }}</textarea>
