--- a/profiles/templates/profiles/change_password.html
+++ b/profiles/templates/profiles/change_password.html
@@ -48,7 +48,8 @@
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter your current password">
 					<input class="input100" id="c_pass" type="password" name="c_pass" placeholder="Current Password" data-bv-field="c_pass">
-				</div>
+				    <span class="focus-input100"></span>
+                </div>
 
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn" type = "submit" value="Submit" id="submit-btn" name="btnSubmit">
