--- a/profiles/templates/profiles/change_password_2.html
+++ b/profiles/templates/profiles/change_password_2.html
@@ -52,11 +52,13 @@
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter your new password">
 					<input class="input100" id="n_pass" type="password" name="n_pass" placeholder="New Password" data-bv-field="n_pass">
-				</div>
+				    <span class="focus-input100"></span>
+                </div>
 
 				<div class="wrap-input100 validate-input" data-validate="Please re-enter your current password">
 					<input class="input100" id="n_pass_2" type="password" name="n_pass_2" placeholder="New Password Again" data-bv-field="n_pass_2">
-				</div>
+				    <span class="focus-input100"></span>
+                </div>
 
 				<div class="container-contact100-form-btn">
 					<button type = "submit" class="contact100-form-btn" id="submit-btn" >
