--- a/assignments/templates/assignments/student/view.html
+++ b/assignments/templates/assignments/student/view.html
@@ -7,7 +7,8 @@
         <div class="row align-items-center">
           <div class="col-lg-12">
             <div class="banner_text"><br><br><br><br><br>
-                <center><h1>{{assignment.name}}</h1>
+                <center><h1 style="display: inline">{{assignment.name}}</h1><br><br>
+                    <h3 style="color: white">Due: {{ assignment.due_date }}</h3>
                         <p style = 'color: white;'>{{ assignment.description }}</p><br><br><br>
                     {% if assignment.done and assignment.linked_model_assignment %}
                         <label style="color: #ffffff">Submission</label><textarea style="height: 164px" id = "submission-done" class = "form-control" readonly>{{ assignment.submission }}</textarea><p style="color: white; float: left;">Word Count: &nbsp;</p><p style="color: white; float: left;" id = "wordCount">0</p><br><br>
@@ -25,8 +26,8 @@
                     {% for student in done %}
                         <div class="card class-card">
                           <div class="card-body">
-                            <a>{{student.user.first_name}}</a>
-                            <a href = "/homework/teacher/student/view/{{ student.id }}" title = "View" class = "btn btn-primary">👁</a>
+                            <h3 style="display: inline">{{student.user.first_name}}
+                            <a href = "/homework/teacher/student/view/{{ student.id }}" title = "View" class = "btn btn-primary">👁</a></h3>
                           </div>
                         </div>
                     {% endfor %}
@@ -34,8 +35,8 @@
                     {% for student in notdone %}
                         <div class="card class-card">
                           <div class="card-body">
-                            <a>{{student.user.first_name}}</a>
-                            <a href = "/homework/teacher/student/view/{{ student.id }}" title = "View" class = "btn btn-primary">👁</a>
+                            <h3 style="display: inline">{{student.user.first_name}}
+                            <a href = "/homework/teacher/student/view/{{ student.id }}" title = "View" class = "btn btn-primary">👁</a></h3>
                           </div>
                         </div>
                     {% endfor %}
