--- a/assignments/templates/assignments/teacher/add.html
+++ b/assignments/templates/assignments/teacher/add.html
@@ -39,7 +39,8 @@
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter a valid assignment name">
 					<input class="input100" id="name" type="text" name="name" placeholder="Assignment Name" data-bv-field="name">
-				</div>
+				    <span class="focus-input100"></span>
+                </div>
 
 				<div id="dropDownSelect1">
 					<select class = "wrap-input100" name = "class" required>
@@ -50,9 +51,14 @@
 					</select>
 				</div>
 
+                <div class="wrap-input100 validate-input" data-validate="Please select a valid due date">
+					<input class="input100" id="name" type="date" name="due_date" placeholder="Due Date" data-bv-field="name">
+				    <span class="focus-input100"></span>
+                </div>
+
 				<div class="wrap-input100 validate-input" data-validate = "Please enter a valid descripion">
 					<textarea class="input100" id = 'description' type="text" name="description" placeholder="Description" data-bv-field="description"></textarea>
-				</div>
+                </div>
 
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn" type = "submit" value="Submit" id="submit-btn" name="btnSubmit">
