--- a/classes/templates/classes/student/join.html
+++ b/classes/templates/classes/student/join.html
@@ -47,7 +47,8 @@
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter your current password">
 					<input class="input100" id="code" type="text" name="code" placeholder="Class Code" data-bv-field="code">
-				</div>
+				    <span class="focus-input100"></span>
+                </div>
 
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn" type = "submit" value="Submit" id="submit-btn" name="btnSubmit">
