--- a/profiles/templates/profiles/edit.html
+++ b/profiles/templates/profiles/edit.html
@@ -49,11 +49,13 @@
 
 				<div class="wrap-input100 validate-input" data-validate="Please enter a valid name">
 					<input class="input100" id="firstname" type="text" name="firstname" placeholder="Full Name" value = "{{user.first_name}}" data-bv-field="firstname" minlength="3" required>
-				</div>
+				    <span class="focus-input100"></span>
+                </div>
 
 				<div class="wrap-input100 validate-input" data-validate = "Please enter a valid username">
 					<input class="input100" id = 'username' type="text" name="username" placeholder="Username" value = "{{user.username}}" data-bv-field="username" minlength="3" required>
-				</div>
+				    <span class="focus-input100"></span>
+                </div>
 
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn" type = "submit" value="Submit" id="submit-btn" name="btnSubmit">
