--- a/static/style.css
+++ b/static/style.css
@@ -28,3 +28,9 @@
         box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25), -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
     }
 }
+
+@media (max-width: 990px) {
+    #date{
+        display: none;
+    }
+}
