--- a/assignments/templates/assignments/student/index.html
+++ b/assignments/templates/assignments/student/index.html
@@ -18,6 +18,7 @@
                       <a href = "" type="button" data-toggle="modal" data-sub = "{{ assignment.submission }}" data-assignid = "{{ assignment.id }}" data-assigname = "{{assignment.name}}" data-target="#exampleModal" title = "Submit" class = "btn btn-success">✓</a>
                       {% if assignment.due_date > time %}<a id = "date" style="float: right;">{% else %}<a id = "date" style="color: red; float: right;">{% endif %}Due: {% if assignment.due_date == time %}Today{% else %}{{ assignment.due_date }}{% endif %}</a>
                       {% else %}
+                      <a href = "/homework/student/edit/{{ assignment.id }}" title = "Edit" class = "btn btn-secondary">✎</a>
                       <a href = "/homework/done/{{ assignment.id }}" type="button" title = "Mark as Done" class = "btn btn-success">✓</a>
                       <a href = "/homework/delete/{{assignment.id}}" onclick="return confirm('Are you sure you want to delete: {{ assignment.name }}');" title = "Delete" class = "btn btn-danger">✗</a>
                       {% if assignment.due_date > time %}<a id = "date" style="float: right;">{% else %}<a id = "date" style="color: red; float: right;">{% endif %}Due: {% if assignment.due_date == time %}Today{% else %}{{ assignment.due_date }}{% endif %}</a>
