--- a/classes/templates/classes/student/view.html
+++ b/classes/templates/classes/student/view.html
@@ -21,6 +21,7 @@
                   <div class="card-body">
                     <h3 style="display: inline">{{assignment.name}}
                     <a href = "/homework/student/view/{{ assignment.id }}" title = "View" class = "btn btn-primary">👁</a></h3>
+                    {% if assignment.due_date > time %}<a id = "date" style="float: right;">{% else %}<a id = "date" style="color: red; float: right;">{% endif %}Due: {% if assignment.due_date == time %}Today{% else %}{{ assignment.due_date }}{% endif %}</a>
                   </div>
                 </div>
               {% endfor %}
