--- a/pages/templates/pages/denied.html
+++ b/pages/templates/pages/denied.html
@@ -1,5 +1,12 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+{% if message %}
+  <div class="alert alert-danger">
+    <a class="close" href="#" data-dismiss="alert">×</a>
+    {{ message }}
+  </div>
+{% endif %}
+
 <br><br><center><h1>Access Denied</h1></center><br>
 
 <center><a class = "btn btn-primary" href = "/home">Go Home</a>
