--- a/homework_manager/templates/registration/login.html
+++ b/homework_manager/templates/registration/login.html
@@ -70,7 +70,8 @@
 
 		<div class="text-center p-t-46 p-b-20">
 			<span class="txt2">
-				Are you a new member <a href = "/new">Sign Up</a>
+				Are you a new member <a href = "/new">Sign Up</a><br>
+				Forgot Password Contact <a href = "mailto:homework.manager@tinu.tech">homework.manager@tinu.tech</a>
 			</span>
 		</div>
 
