Made changes to the navbar in order to add the admin panel in admin tools.

--- a/homework_manager/templates/base.html
+++ b/homework_manager/templates/base.html
@@ -114,8 +114,9 @@
                       Admin Tools
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="/admin">Admin Panel</a>
                       <a class="dropdown-item" href="/update">Update Tool</a>
-                      <a class="dropdown-item" href="/passwords/add">Password Reset Request</a>
+                      <a class="dropdown-item" href="/passwords/add">Password Requests</a>
                     </div>
                   </li>
                   {% endif %}
